Q-0.8.1d50
[new] downloader: new download list according to new oszoo pages, moved list to new server 
[fix] Makefile: use -lcrypto instead of full path to libcrypto 
[new] credits: licenses 
[new] downloader: if there is a README file with the downloaded Guest PC, open it in TextEdit? after download is finished 
[fix] downloader: leave all files from the downloaded archive in qvm package 
[fix] downloader: finding a folder with .img or .qcow in it's name sets it not as harddisk anymore 
[fix] downloader: add support for gzip files, throw warning when archive is corrupt 
[fix] downloader: downloaded progress not reset when download cancelled or started again 
[fix] downloader: set Transmission revision back to 480 (official version 0.6.1), now using only stable Transmission releases 
[fix] downloader: cancel download when .torrent file could not be downloaded and show error message

Q-0.8.1d47
[fix] streamlined Q Control Guest Infos

Q-0.8.1d46
[fix] editPC network firewall display bug
[fix] better interface for firewall

Q-0.8.1d45
[new] fullscreen toolbarIcon
[new] toolbarIcon defaults
[new] backwards guest/windowcycling (cmd + >)

Q-0.8.1d44
[new] editPC network tab
[new| firewall (redirect) pane

Q-0.8.1d40
[fix] prepare.sh does co q over http for simpler commit

Q-0.8.1d39
[fix] comply with new transmission build rules

Q-0.8.1d38
[fix] comply with new transmission build system
[fix] fixed transmission svn rev to 638

Q-0.8.1d37
[new] fullscreen guest/windowcycling
[new] hotkey support for guest/windowcycling (cmd + <)
[new] animation when switch to monitor and back (ctrl-alt-1..9)
[new] new Guest Assistant launched when double-clicking a empty table row
[new] qcontrol Makefile added "install" target
[fix] shutdown of paused guests
[fix] edit of not hilited guests
[fix] editPC file-selector remembers last position
[fix] file formats editPC and guest: qcow, raw, cow, vmdk, cloop, img, iso, dsk, dmg, cdr, toast, flp, fs